--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Covid19Finder-backend",
+  "name": "covid19finder",
   "version": "0.0.0",
   "description": "Online mobile Banking application (server-side app)",
   "author": "Covid19Finder Team <contact@Covid19Finder.com>",
@@ -10,8 +10,10 @@
     "yarn": "*"
   },
   "scripts": {
-    "precommit": "yarn lint",
+    "precommit": "yarn validate",
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "android": "node node_modules/react-native/local-cli/cli.js run-android",
+    "validate": "yarn lint && yarn test",
     "test": "jest",
     "lint": "esw **/*.js --ignore-path .gitignore server config --color",
     "lint:watch": "yarn lint -- --watch",
@@ -20,8 +22,9 @@
     "clean:android": "cd android/ && ./gradlew clean && cd .. && react-native run-android",
     "newclear": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && npm cache clean --force && npm i",
     "test:watch": "jest --watch",
-    "updateSnapshot": "jest --updateSnapshot",
-    "coverage": "jest --coverage && open coverage/lcov-report/index.html || xdg-open coverage/lcov-report/index.html",
+    "test:verbose": "jest --verbose",
+    "test:snap": "jest --updateSnapshot",
+    "test:cov": "jest --coverage && open coverage/lcov-report/index.html || xdg-open coverage/lcov-report/index.html",
     "android:build": "cd android && ./gradlew assembleRelease",
     "android:install": "cd android && ./gradlew assembleRelease && ./gradlew installRelease",
     "android:hockeyapp": "cd android && ./gradlew assembleRelease && puck -submit=auto app/build/outputs/apk/app-release.apk",
@@ -31,25 +34,41 @@
     "storybook": "storybook start -p 7007"
   },
   "dependencies": {
-    "add": "^2.0.6",
     "apisauce": "^0.14.2",
+    "d3-interpolate": "^1.1.6",
     "format-json": "^1.0.3",
     "identity-obj-proxy": "^3.0.0",
     "lodash": "^4.17.4",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "native-base": "^2.3.9",
     "prop-types": "^15.6.0",
+    "pusher-js": "^4.2.2",
     "querystringify": "1.0.0",
     "ramda": "^0.25.0",
-    "react": "16.0.0",
-    "react-native": "0.50.4",
+    "react": "16.3.2",
+    "react-native": "0.55.3",
     "react-native-config": "^0.10.0",
+    "react-native-confirmation-code-input": "^1.0.4",
+    "react-native-content-loader": "^0.1.6",
+    "react-native-i18n": "1.0.0",
+    "react-native-image-picker": "^0.26.7",
+    "react-native-nfc-manager": "^0.4.2",
+    "react-native-popup-dialog": "^0.10.46",
+    "react-native-pulse": "^1.0.6",
+    "react-native-push-notification": "^3.0.2",
+    "react-native-pusher-push-notifications": "^1.2.2",
+    "react-native-simple-radio-button": "^2.7.1",
+    "react-native-snap-carousel": "^3.7.0",
+    "react-native-svg": "^6.3.1",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^1.1.2",
     "react-navigation-redux-helpers": "^1.0.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-form": "^7.3.0",
     "redux-saga": "^0.16.0",
     "reduxsauce": "0.7.0",
-    "seamless-immutable": "^7.1.2",
-    "yarn": "^1.3.2"
+    "seamless-immutable": "^7.1.2"
   },
   "devDependencies": {
     "@storybook/addon-storyshots": "^3.2.16",
@@ -72,14 +91,18 @@
     "eslint-plugin-react": "^7.6.1",
     "eslint-watch": "^3.1.3",
     "husky": "^0.14.3",
+    "ignite-i18n": "^1.1.1",
     "ignite-ir-boilerplate": "^2.3.1",
     "jest": "22.2.2",
+    "metro": "^0.59.0",
+    "metro-core": "^0.59.0",
     "mockery": "^2.1.0",
-    "react-dom": "16.0.0",
-    "react-test-renderer": "16.0.0",
+    "react-dom": "16.3.2",
+    "react-test-renderer": "16.3.2",
     "reactotron-react-native": "^1.13.2",
     "reactotron-redux": "^1.13.0",
-    "reactotron-redux-saga": "^1.13.0"
+    "reactotron-redux-saga": "^1.13.0",
+    "redux-mock-store": "^1.5.1"
   },
   "jest": {
     "testMatch": [
@@ -96,7 +119,10 @@
     "setupFiles": [
       "<rootDir>/Tests/Setup"
     ],
-    "preset": "react-native"
+    "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!react-native|native-base|react-navigation)"
+    ]
   },
   "config": {}
 }
