--- a/Front-End/android/app/build.gradle
+++ b/Front-End/android/app/build.gradle
@@ -137,6 +137,13 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-svg')
+
+    compile project(':react-native-nfc-manager')
+    compile project(':react-native-image-picker')
+    compile project(':react-native-i18n')
+  
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
