--- a/Front-End/ios/Covid19Finder.xcodeproj/xcshareddata/xcschemes/Covid19Finder-tvOS.xcscheme
+++ b/Front-End/ios/Covid19Finder.xcodeproj/xcshareddata/xcschemes/Covid19Finder-tvOS.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "TharwaMobile-tvOS.app"
-               BlueprintName = "TharwaMobile-tvOS"
-               ReferencedContainer = "container:TharwaMobile.xcodeproj">
+               BuildableName = "covid19finder-tvOS.app"
+               BlueprintName = "covid19finder-tvOS"
+               ReferencedContainer = "container:covid19finder.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "TharwaMobile-tvOSTests.xctest"
-               BlueprintName = "TharwaMobile-tvOSTests"
-               ReferencedContainer = "container:TharwaMobile.xcodeproj">
+               BuildableName = "covid19finder-tvOSTests.xctest"
+               BlueprintName = "covid19finder-tvOSTests"
+               ReferencedContainer = "container:covid19finder.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "TharwaMobile-tvOSTests.xctest"
-               BlueprintName = "TharwaMobile-tvOSTests"
-               ReferencedContainer = "container:TharwaMobile.xcodeproj">
+               BuildableName = "covid19finder-tvOSTests.xctest"
+               BlueprintName = "covid19finder-tvOSTests"
+               ReferencedContainer = "container:covid19finder.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "TharwaMobile-tvOS.app"
-            BlueprintName = "TharwaMobile-tvOS"
-            ReferencedContainer = "container:TharwaMobile.xcodeproj">
+            BuildableName = "covid19finder-tvOS.app"
+            BlueprintName = "covid19finder-tvOS"
+            ReferencedContainer = "container:covid19finder.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "TharwaMobile-tvOS.app"
-            BlueprintName = "TharwaMobile-tvOS"
-            ReferencedContainer = "container:TharwaMobile.xcodeproj">
+            BuildableName = "covid19finder-tvOS.app"
+            BlueprintName = "covid19finder-tvOS"
+            ReferencedContainer = "container:covid19finder.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "TharwaMobile-tvOS.app"
-            BlueprintName = "TharwaMobile-tvOS"
-            ReferencedContainer = "container:TharwaMobile.xcodeproj">
+            BuildableName = "covid19finder-tvOS.app"
+            BlueprintName = "covid19finder-tvOS"
+            ReferencedContainer = "container:covid19finder.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
