--- a/Front-End/ios/Covid19Finder.xcodeproj/xcshareddata/xcschemes/Covid19Finder.xcscheme
+++ b/Front-End/ios/Covid19Finder.xcodeproj/xcshareddata/xcschemes/Covid19Finder.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "TharwaMobile.app"
-               BlueprintName = "TharwaMobile"
-               ReferencedContainer = "container:TharwaMobile.xcodeproj">
+               BuildableName = "covid19finder.app"
+               BlueprintName = "covid19finder"
+               ReferencedContainer = "container:covid19finder.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "TharwaMobileTests.xctest"
-               BlueprintName = "TharwaMobileTests"
-               ReferencedContainer = "container:TharwaMobile.xcodeproj">
+               BuildableName = "covid19finderTests.xctest"
+               BlueprintName = "covid19finderTests"
+               ReferencedContainer = "container:covid19finder.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "TharwaMobileTests.xctest"
-               BlueprintName = "TharwaMobileTests"
-               ReferencedContainer = "container:TharwaMobile.xcodeproj">
+               BuildableName = "covid19finderTests.xctest"
+               BlueprintName = "covid19finderTests"
+               ReferencedContainer = "container:covid19finder.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "TharwaMobile.app"
-            BlueprintName = "TharwaMobile"
-            ReferencedContainer = "container:TharwaMobile.xcodeproj">
+            BuildableName = "covid19finder.app"
+            BlueprintName = "covid19finder"
+            ReferencedContainer = "container:covid19finder.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "TharwaMobile.app"
-            BlueprintName = "TharwaMobile"
-            ReferencedContainer = "container:TharwaMobile.xcodeproj">
+            BuildableName = "covid19finder.app"
+            BlueprintName = "covid19finder"
+            ReferencedContainer = "container:covid19finder.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "TharwaMobile.app"
-            BlueprintName = "TharwaMobile"
-            ReferencedContainer = "container:TharwaMobile.xcodeproj">
+            BuildableName = "covid19finder.app"
+            BlueprintName = "covid19finder"
+            ReferencedContainer = "container:covid19finder.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
