--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -61,6 +61,7 @@
     "react-native-svg": "^6.3.1",
     "react-navigation": "^1.1.2",
     "react-navigation-redux-helpers": "^1.0.1",
+    "react-native-vector-icons": "^4.6.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
